--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="Earn money online, Here you select your field in which you want to earn dollarsSelect Captcha Job To Solve Captchas and earnSelect Freelancing Job To Earn Money By FreelancingSelect Ads Watching Job To Watch Ads And Earn MoneyClick On Link Shortening Job To Earn Money By Short URLs, First Click The ButtonSkip The Ad To Proceed">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
+    <meta name="hilltopads-site-verification" content="8250cb7d0b05e78fcdb2dd69598515b0943dfb48" />
     <title>Jobs</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Jobs.css" media="screen">
